--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>About | Chi Njoku</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../Bootstrap-Portfolio/style.css">
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
           </div> 
           <div class="row">
             <div class="col-lg-3">
-                <img src="../Bootcamp/Week 2/Basic-Portfolio/assets/images/myself.jpg" class="auth-image" alt="Your Name">
+                <img src="images/myself.jpg" class="auth-image" alt="Your Name">
             </div>
 
               <div class= "col-lg-9">
