--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Portfolio | Chi Njoku</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../Bootstrap-Portfolio/style.css">
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
 <body>
@@ -42,14 +42,14 @@
     <div class="row">
       <div class="col-lg-4">
       <div class="work">
-        <img src="./technics.jpg" alt="Word Guess">
+        <img src="./images/technics2.jpg" alt="Word Guess">
         <h3>Word Guess</h3>
       </div>
     </div>
 
         <div class="col-lg-4">
           <div class="work">
-           <img src="../Bootcamp/Week 2/Basic-Portfolio/assets/images/technics.jpg" alt="RPG Game">
+           <img src="./images/technics3.jpg" alt="RPG Game">
            <h3>RPG Game</h3>
           </div>
       </div>
@@ -58,14 +58,14 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="work">
-          <img src="../Bootcamp/Week 2/Basic-Portfolio/assets/images/technics3.jpg" alt="Trivia Game">
+          <img src="./images/abstract-q-c-640-480-2.jpg" alt="Trivia Game">
           <h3>Trivia Game</h3>
         </div>
       </div>
 
     <div class="col-lg-4">
       <div class="work">
-        <img src="../Bootcamp/Week 2/Basic-Portfolio/assets/images/abstract-q-c-640-480-2.jpg" alt="Rutgers Info Widget">
+        <img src="./images/abstract2.jpg" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
@@ -76,7 +76,7 @@
       <div class="col-lg-4">
         <div class="work">
       <div class="work">
-        <img src="../Bootcamp/Week 2/Basic-Portfolio/assets/images/abstract2.jpg" alt="Rock Paper Scissors">
+        <img src="./images/technics.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
